--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "antd": "^5.8.1",
+    "axios": "^1.4.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.0",
