--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-slick": "^0.23.10",
     "antd": "^5.8.1",
     "axios": "^1.4.0",
+    "env": "^0.0.2",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
