--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.6",
+    "swiper": "^10.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
