--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-slick": "^0.23.10",
     "antd": "^5.8.1",
+    "antd-mobile": "^5.32.1",
     "axios": "^1.4.0",
     "env": "^0.0.2",
     "eslint-config-prettier": "^8.9.0",
